Another code fixing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ ObiektowaKsiazkaAdresowa.02.*
 Uzytkownicy.txt
 Adresaci.txt
 planObiektowaKsiazkaAdresowa.uxf
+ObiektowaKsiazkaAdresowa.03.*
+ObiektowaKsiazkaAdresowa.03.depend
+ObiektowaKsiazkaAdresowa.03.layout
